header icon color deyisdim

--- a/main.css
+++ b/main.css
@@ -68,7 +68,7 @@ body .container .cards .card .card-img {
   overflow: hidden;
 }
 body .container .cards .card .card-img i {
-  color: #333;
+  color: #f5f3f3;
   position: absolute;
   top: 10px;
   right: 10px;
