--- a/main.scss
+++ b/main.scss
@@ -65,11 +65,12 @@ body{
                     height: 50%;
                     overflow: hidden;
                     i{
-                        color: #333;
+                        color: #f5f3f3;
                         position: absolute;
                         top: 10px;
                         right: 10px;
                         font-size: 30px;
+                        
                     }
                     i:hover{
                         color: red;
